--- a/extension-manifest-v2/_locales/fr/messages.json
+++ b/extension-manifest-v2/_locales/fr/messages.json
@@ -809,6 +809,9 @@
   "ghostery_is_disabled": {
     "message": "Ghostery est désactivé"
   },
+  "ghostery_is_installed_with_limited_functionality": {
+    "message": "Ghostery est installé avec une fonctionnalité limitée"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery est installé !"
   },
@@ -820,6 +823,9 @@
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
     "message": "Ghostery met en échec les trackers et empêche les courtiers en données de dresser votre profil."
+  },
+  "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery bloqueur de traqueurs et publicités nomme uniquement les traqueurs présents sur les sites web que vous visitez. Vous naviguez sur le web sans protection."
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
@@ -857,6 +863,9 @@
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
     "message": "Des informations sur les trackers web seront partagées conformément à notre <a href=\"$${0}\">politique de confidentialité</a>"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Information sur les trackers web sera partagée conformément à notre <a href=\"$${0}\">Politique de confidentialité</a>, pour avancer la protection de la vie privée de la communauté Ghostery."
   },
   "invalid_email_forgot": {
     "message": "Désolé, vous devez saisir une adresse e-mail valide."
@@ -1970,6 +1979,9 @@
   },
   "whotracks_me_statistical_report": {
     "message": "Rapport statistique de WhoTracks.Me"
+  },
+  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Sans activation des fonctionnalités de confidentialité, seule la fonction de base identifiant les traqueurs est disponible."
   },
   "yes": {
     "message": "Oui"
