--- a/extension-manifest-v2/_locales/it/messages.json
+++ b/extension-manifest-v2/_locales/it/messages.json
@@ -809,6 +809,9 @@
   "ghostery_is_disabled": {
     "message": "Ghostery è disabilitato"
   },
+  "ghostery_is_installed_with_limited_functionality": {
+    "message": "Ghostery è installato con funzionalità limitate"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery è pronto!"
   },
@@ -820,6 +823,9 @@
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
     "message": "Ghostery blocca i tracker e impedisce la tua profilazione da parte di broker di dati."
+  },
+  "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery Tracker & Ad Blocker si limita a nominare i tracker presenti sui siti web visitati. State navigando sul web senza protezione."
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrerà quanti tracker sono stati bloccati in una pagina. Cliccare sull’icona di Ghostery per avere informazioni più dettagliate."
@@ -857,6 +863,9 @@
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
     "message": "Le informazioni inerenti i tracker sul web verranno condivise in conformità alla nostra <a href=\"$${0}\">Informativa sulla privacy</a>"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Le informazioni sui web tracker saranno condivise in conformità con la nostra <a href=\"$${0}\">Politica sulla privacy</a>, promuovendo la protezione della privacy per la comunità di Ghostery."
   },
   "invalid_email_forgot": {
     "message": "Spiacenti, devi inserire un vero indirizzo email."
@@ -1970,6 +1979,9 @@
   },
   "whotracks_me_statistical_report": {
     "message": "Rapporto statistico WhoTracks.Me"
+  },
+  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Senza le funzionalità di privacy attivate, è disponibile solo la funzionalità di base di identificazione dei tracker."
   },
   "yes": {
     "message": "Sì"
