--- a/extension-manifest-v2/_locales/zh_TW/messages.json
+++ b/extension-manifest-v2/_locales/zh_TW/messages.json
@@ -809,6 +809,9 @@
   "ghostery_is_disabled": {
     "message": "Ghostery 已關閉"
   },
+  "ghostery_is_installed_with_limited_functionality": {
+    "message": "Ghostery 安裝了有限的功能"
+  },
   "ghostery_is_ready": {
     "message": "Ghostery 已準備好了！"
   },
@@ -820,6 +823,9 @@
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
     "message": "Ghostery 幫你阻擋追蹤器，防止數據中介獲得你的個人資料。"
+  },
+  "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
+    "message": "Ghostery Tracker＆Ad Blocker正在命名您访问的网站上的跟踪器。您正在未受保护的情况下浏览网页。"
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
@@ -857,6 +863,9 @@
   },
   "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a_": {
     "message": "網頁追蹤器的資訊將依據我們的<a href=\"$${0}\">隱私權政策</a>分享"
+  },
+  "information_about_web_trackers_will_be_shared_in_accordance_with_our__a_href__@_0___privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "根據我們的<a href=\"$${0}\">隱私政策</a>，將分享有關網路追蹤器的資訊，以推進Ghostery社群的隱私保護。"
   },
   "invalid_email_forgot": {
     "message": "很抱歉，您必須輸入一個真實的電郵址。"
@@ -1970,6 +1979,9 @@
   },
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me 統計報告"
+  },
+  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "啟用隱私功能後，僅提供命名追蹤器的基本功能。"
   },
   "yes": {
     "message": "是"
