--- a/extension-manifest-v2/_locales/de/messages.json
+++ b/extension-manifest-v2/_locales/de/messages.json
@@ -948,7 +948,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery Tracker- & Werbeblocker | Datenschutz AdBlocker"
+    "message": "Ghostery Tracker- & Werbeblocker | AdBlocker"
   },
   "never_consent": {
     "message": "Never-Consent"
