--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -948,7 +948,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery Tracker & Ad Blocker - Privacy AdBlock"
+    "message": "Ghostery Tracker Ad Blocker - Privacy AdBlock"
   },
   "never_consent": {
     "message": "Never-Consent"
