--- a/extension-manifest-v2/_locales/it/messages.json
+++ b/extension-manifest-v2/_locales/it/messages.json
@@ -948,7 +948,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery Blocco Annunci e Tracker - Privacy AdBlock"
+    "message": "Ghostery Blocco Annunci e Tracker - AdBlock"
   },
   "never_consent": {
     "message": "Never-Consent"
