--- a/extension-manifest-v2/_locales/pl/messages.json
+++ b/extension-manifest-v2/_locales/pl/messages.json
@@ -948,7 +948,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery Bloker Trackerów i Reklam - Prywatność AdBlock"
+    "message": "Ghostery Bloker Trackerów i Reklam - AdBlock"
   },
   "never_consent": {
     "message": "Never-Consent"
