--- a/extension-manifest-v2/_locales/ru/messages.json
+++ b/extension-manifest-v2/_locales/ru/messages.json
@@ -948,7 +948,7 @@
   },
   "name": {
     "description": "The title of this extension (Ghostery).",
-    "message": "Ghostery Трекер & Ad Blocker - приватный блокировщик рекламы"
+    "message": "Ghostery блокировщик трекеров и рекламы"
   },
   "never_consent": {
     "message": "Never-Consent"
